--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <section>
-            <input id="pesquisa" type="text" placeholder="Digite o nome do filme">
+            <input id="campo-pesquisa" type="text" placeholder="Digite algo para realizar a pesquisa">
             <button onclick="pesquisar()">Pesquisar</button>
             <a id="qtde-resultados"></a>
         </section>
