--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <img src="iconDinosaur.png" alt="icone Jurassic Park" style="margin-top: 5px;" width="100px" height="100px">
         <h1>Franquia Jurassic Park</h1>
     </header>
     <main>
